fix: steam client update info dont show up when downloadbar is not visible

--- a/options/general/alwaysShowDownloadbar.css
+++ b/options/general/alwaysShowDownloadbar.css
@@ -3,6 +3,6 @@
 }
 
 
-._1_yS5UP7el0aN4vntx3dx {
+._1_yS5UP7el0aN4vntx3dx ._3vCzSrrXZzZjVJFZNg9SGu {
     visibility: visible !important;
 }
