--- a/src/css/steam/sidebar.css
+++ b/src/css/steam/sidebar.css
@@ -373,24 +373,24 @@ body.QsvsRVwbsApgKt1MhM0fz:has(._1_yS5UP7el0aN4vntx3dx .wi0pDywRgOCxhG7OqQNaA) .
 & Download bar
 */
 ._1_yS5UP7el0aN4vntx3dx {
-    visibility: hidden;
     position: absolute;
     bottom: calc(16px + 90px + 6px);
     left: 16px;
     height: 49px;
 }
-._1_yS5UP7el0aN4vntx3dx:has(.wi0pDywRgOCxhG7OqQNaA) {
-    visibility: visible;
-}
 
 
 ._1_yS5UP7el0aN4vntx3dx ._3vCzSrrXZzZjVJFZNg9SGu {
+    visibility: hidden;
     flex: unset;
     height: 100%;
     padding: 12px;
     border-radius: 8px;
     background-color: rgb(var(--st-color-2));
     box-shadow: unset;
+}
+._1_yS5UP7el0aN4vntx3dx:has(.wi0pDywRgOCxhG7OqQNaA) ._3vCzSrrXZzZjVJFZNg9SGu {
+    visibility: visible;
 }
 
 
